--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,2 +1,6 @@
 <h1>Dashboard</h1>
 <p>Find me in app/views/dashboard/index.html.erb</p>
+
+<%= link_to 'Entries', entries_path %>
+
+<%= link_to 'Sign out', destroy_user_session_path,   data: { turbo_method: :delete } %>
