--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,5 +1,6 @@
 <h1>Dashboard</h1>
-<p>Find me in app/views/dashboard/index.html.erb</p>
+
+<%= link_to 'Profile', profile_path %>
 
 <%= link_to 'Entries', entries_path %>
 
