--- a/app/views/comment/index.html.erb
+++ b/app/views/comment/index.html.erb
@@ -1,2 +1,18 @@
-<h1>Comment#index</h1>
-<p>Find me in app/views/comment/index.html.erb</p>
+<h1> Comments for <%= @entry.text %> </h1> 
+# possible change?
+
+
+<% @comments.each do |comment| %>
+  <div>  
+    <p>
+    # <strong> <%= comment.user.username %>:</strong> Add once username is added (might need to change)
+    <%= comment.text %>
+   </p> 
+
+   </div>
+
+   <% end %>
+
+   <div>
+   <%= link_to 'Back to entry', @entry %>
+   </div>
