added testing for views folder: edit and index files

--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -11,6 +11,6 @@
 <br>
 <% end %>
 <div>
-  <%= link_to "Show this comment", @comment %> |
-  <%= link_to "Back to comment", comments_path %>
+  <%= link_to "Show this comment", entry_comments_path(@entry, @comment) %> |
+  <%= link_to "Back to comment", entry_comments_path(@entry) %>
 </div>
