--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,11 +1,11 @@
 
 <%= form_with model: [@entry, @entry.comments.build], local: true do |f| %>
-  <% if f.object.errors.any? %>
+  <% if @comment.errors.any? %>
     <div >
-      <h2><%= pluralize(f.object.errors.count, "error") %> prohibited this comment from being saved:</h2>
+      <h2><%= pluralize(@comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
 
       <ul>
-        <% f.object.errors.full_messages.each do |message| %>
+        <% @comment.errors.full_messages.each do |message| %>
           <li><%= message %></li>
         <% end %>
       </ul>
