--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,7 @@
       <% end %>
       <div class="col-md-8">
         <div class="card-body">
-          <h5 class="card-title"><%= @user.first_name %> <%= @user.last_name %></h5>
+          <h5 class="card-title"><%= @user.username %> </h5>
           <% if @user.bio.present? %>
             <p class="card-text"><%= @user.bio %></p>
           <% else %>
