--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -32,15 +32,15 @@
 
 <%= link_to 'Edit', edit_entry_path(@entry) %> |<%= link_to 'Back to Entries', entries_path %>
 
-<h3> Comments </h3>
+<h4> Comments: </h4>
 <% @entry.comments.each do |comment| %>
   <div>
-  <strong><%= comment.user.name %>: </strong>
+  <strong><%= comment.user.email %>: </strong>
   <%= comment.text %>
-  <%= link_to 'View', entry_comment_path(@entry, @comment) %> |
+  <%= link_to 'View', entry_comment_path(@entry, comment) %> |
   <% if comment.user == current_user %>
-   <%= link_to 'Edit', edit_entry_comment_path(@entry, @comment) %> |
-   <%= link_to 'Delete', entry_comment_path(@entry, @comment), metod: :delete, data: {confirm: 'Are you sure?'} %>
+   <%= link_to 'Edit', edit_entry_comment_path(entry, comment) %> |
+   <%= link_to 'Delete', entry_comment_path(entry, comment), metod: :delete, data: {confirm: 'Are you sure?'} %>
    <% end %>
    </div> 
 
