Revert "changed friends to friendships and updated some of the testing"
This reverts commit 24d6bb6a0c6fd09639f4e8810fee2fa4a204e7fe.

--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -8,5 +8,5 @@
 
 <% end %>
   <%= link_to 'Edit', edit_entry_comment_path(@entry, @comment), class: "btn btn-primary" %> |
-  <%= link_to 'My Entries', entries_path, class: "btn btn-primary" %>
+  <%= link_to 'My Entries', @entry, class: "btn btn-primary" %>
   <%= link_to 'Friends Entries', friend_entries_path, class: "btn btn-primary" %>
