--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -4,6 +4,10 @@
 
 <%= link_to 'Entries', entries_path %>
 
-<%= link_to 'Schedule', notification_path(current_user.notification || Notification.new(user: current_user)) %>
+<% if current_user.notification %>
+  <%= link_to 'Schedule', notification_path(current_user.notification) %>
+<% else %>
+  <%= link_to 'Schedule', new_notification_path %>
+<% end %>
 
 <%= link_to 'Sign out', destroy_user_session_path,   data: { turbo_method: :delete } %>
