--- a/app/views/notifications/show.html.erb
+++ b/app/views/notifications/show.html.erb
@@ -1,17 +1,16 @@
-<h1 class="my-4">Notification Schedule</h1>
+<div class="container mt-5">
+  <div class="card">
+    <div class="card-header">
+      <h3>Notification Schedule</h3>
+    </div>
+    <div class="card-body">
+      <p><strong>Days of the Week:</strong> <%= @notification.days_of_week.join(", ").titleize %></p>
+      <p><strong>Time:</strong> <%= @notification.hour %>:<%= @notification.minute.to_s.rjust(2, '0') %> <%= @notification.ampm %></p>
 
-<%= form_for @notification do |f| %>
-  <div class="form-group">
-    <%= f.label :days_of_week, "Select Days", class: "form-label" %>
-    <%= f.select :days_of_week, options_for_select(['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday'], @notification.days_of_week), { multiple: true, class: "form-control" } %>
+      <div class="d-flex gap-2">
+        <%= link_to 'Edit Schedule', edit_notification_path(@notification), class: "btn btn-warning" %>
+        <%= link_to 'Back to Dashboard', root_path, class: "btn btn-secondary" %>
+      </div>
+    </div>
   </div>
-
-  <div class="form-group">
-    <%= f.label :time, "Select Time", class: "form-label" %>
-    <%= f.time_select :time, default: @notification.time, class: "form-control" %>
-  </div>
-
-  <div class="form-group mt-3">
-    <%= f.submit "Save Schedule", class: "btn btn-primary" %>
-  </div>
-<% end %>
+</div>
