--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,12 +15,154 @@
  */
 @import "bootstrap";
 
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f9f9f9;
+@font-face {
+    font-family: 'TiemposHeadline-Medium';
+    src: url('TiemposHeadline-Medium.otf') format('opentype');
+    font-weight: bold;
+    font-style: normal;
+}
+
+* {
     margin: 0;
-    padding: 20px;
+    box-sizing: border-box;
+    font-family: "TiemposHeadline-Medium";
+}
+
+
+.app__navbar {
+    display: flex;
+    justify-content: space-between;
+    padding: 40px;
+    align-items: center;
+}
+
+.app__navbar_left {
+    display: flex;
+    gap: 30px
+}
+
+.app__navbar_left button {
+    border: none;
+    border-radius: 50px;
+    padding: 10px;
+    width: 150px;
+    background-color: #D9D9D9;
+}
+
+.app__navbar_left .navbar-btn {
+    display: inline-block;
+    border: none;
+    border-radius: 50px;
+    padding: 10px;
+    width: 150px;
+    background-color: #ffffff;
+    text-decoration: none;
+    text-align: center;
+    color: #000;
+}
+
+.app__navbar_right {
+    border: none;
+    border-radius: 100px;
+    width: 60px;
+    display: flex;
+    height: 60px;
+    justify-content: center;
+    align-items: center;
+    background-color: #D9D9D9;
+}
+
+.dashboard__main-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 70px;
+    position: relative;
+    gap: 20px
+}
+
+.dashboard__main-container p {
+    font-size: 40px;
+    color: white;
+}
+
+.dashboard__spinner {
+    width: 450px;
+    padding: 30px;
+    aspect-ratio:1;
+    border-radius: 80%;
+    background: #6e6e6e;
+    --_m:
+            conic-gradient(#0000 30%,#000),
+            linear-gradient(#000 0 0) content-box;
+    -webkit-mask: var(--_m);
+    mask: var(--_m);
+    -webkit-mask-composite: source-out;
+    mask-composite: subtract;
+    animation: spin 12s infinite linear;
+}
+
+@keyframes spin {
+    to {
+        transform: rotate(1turn)
+    }
+}
+
+.dashboard__create-entry-container {
+    position: absolute;
+    top: 48%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.dashboard__create-entry-container button {
+    border: none;
+    border-radius: 100px;
+    width: 80px;
+    height: 80px;
+    font-size: 70px;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.dashboard__entry-create {
+    border: none;
+    border-radius: 100px;
+    width: 80px;
+    height: 80px;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+
+.dashboard__entry-create p {
+    color: black;
+    font-size: 60px !important;
+    margin-top: 20px;
+    position: absolute;
+}
+
+
+.dashboard__create-entry-container p {
+    font-size: 25px;
+}
+
+
+
+body {
+    background-color: #000000;
+    margin: 0;
+    //padding: 20px;
     color: #333;
+
 }
 
 h1 {
