--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,16 +1,10 @@
-<h1>Dashboard</h1>
-
-
-<div class="header-actions">
-  <%= link_to 'Profile', profile_path,  class:'new-entry-button'%>
-  <%=  link_to 'Entries', entries_path , class: 'new-entry-button' %>
-  <%= link_to 'Sign out', destroy_user_session_path,   data: { turbo_method: :delete }, class: 'new-entry-button' %>
-  <%= link_to 'Friends', friend_entries_path, class: 'new-entry-button' %>
-
-  <% if current_user.notification %>
-    <%= link_to 'Schedule', notification_path(current_user.notification), class:'new-entry-button' %>
-  <% else %>
-    <%= link_to 'Schedule', new_notification_path, class:'new-entry-button' %>
-  <% end %>
-
-</div>
+<section class="dashboard__main-container">
+  <p>How are you feeling right now?</p>
+  <div class="dashboard__spinner"></div>
+  <div class="dashboard__create-entry-container">
+    <div class="dashboard__entry-create">
+      <p class="dashboard__plus">﹢</p>
+    </div>
+    <p>Check in</p>
+  </div>
+</section>
