--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -1,19 +1,84 @@
-<h1>My Entries</h1>
+<section class="entries__index-all-entries-container">
+  <h2>My Entries</h2>
+  <div class="header-actions">
+    <%= link_to 'New Entry', new_entry_path, class: 'new-entry-button' %>
+    <%= link_to 'Dashboard', dashboard_index_path, class: 'new-entry-button' %>
+  </div>
 
-<div class="header-actions">
-  <%= link_to 'New Entry', new_entry_path, class: 'new-entry-button' %>
-  <%= link_to 'Dashboard', dashboard_index_path, class: 'new-entry-button' %>
-</div>
-
-<div class="entries-container">
   <% @entries.each do |entry| %>
-    <div class="entry-card">
-      <h2 class="entry-title"><%= entry.text %></h2>
-      <div class="entry-actions">
-        <%= link_to 'Show', entry, class: 'action-button show-button' %>
-        <%= link_to 'Edit', edit_entry_path(entry), class: 'action-button edit-button' %>
-        <%= button_to 'Delete', entry, method: :delete, class: 'action-button delete-button' %>
+    <section
+      class="<%= 'entries__index-' + mood_group(entry.emotion)%> entries__index-entry-container entry-click"
+             data-url="<%= entry_path(entry) %>">
+      <div class="entries__index-entry-header">
+        <div class="entries__index-entry-header-left">
+          <p><%= entry.created_at.strftime("%a %b %-d %l:%M %p") %></p>
+
+          <div class="entries__index-entry-header-left-tags">
+            <p>tag1</p>
+            <p>tag2</p>
+          </div>
+        </div>
+
+        <div class="entries__index-entry-header-right">
+          <div>avatar</div>
+        </div>
       </div>
-    </div>
+
+      <div class="entries__index-entry-footer">
+        <div class="entries__index-entry-footer-left">
+          <p><span>I'm feeling </span></p>
+          <p class="entries__show-emotion-label"><%= entry.emotion %></p>
+        </div>
+
+        <div class="entries__index-entry-footer-right">
+          <div>emotion shape (if time..)</div>
+        </div>
+      </div>
+
+
+      <div class="entries__index-blob">
+        <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" width="130%" id="blobSvg">
+          <defs>
+            <linearGradient id="fill" x1="0%" y1="0%" x2="100%" y2="0%" gradientTransform="rotate(245 0.5 0.5)">
+              <stop offset="0%" stop-color="
+               rgba(234, 255, 214, 0.02)
+"></stop>
+
+            </linearGradient>
+          </defs>
+          <path fill="url(#fill)">
+            <animate attributeName="d" dur="10s" repeatCount="indefinite"
+                     values="
+                     M80.5,60.5Q67,71,56,72Q45,73,36,67Q27,61,26.5,49.5Q26,38,34,26.5Q42,15,57.5,18Q73,21,83.5,35.5Q94,50,80.5,60.5Z;
+
+                     M81.5,60Q66,70,53.5,80Q41,90,24.5,80Q8,70,12.5,52Q17,34,28.5,20.5Q40,7,52.5,19.5Q65,32,81,41Q97,50,81.5,60Z;
+
+                     M83.5,64Q72,78,58.5,75Q45,72,31,69Q17,66,16,49.5Q15,33,28.5,25Q42,17,53.5,24.5Q65,32,80,41Q95,50,83.5,64Z;
+
+                     M74.5,58Q63,66,54,69Q45,72,26,71.5Q7,71,18.5,55.5Q30,40,37.5,33.5Q45,27,63,19Q81,11,83.5,30.5Q86,50,74.5,58Z;
+
+                     M77,67.5Q78,85,59.5,87.5Q41,90,32,76.5Q23,63,26.5,51.5Q30,40,35,22Q40,4,59,9.5Q78,15,77,32.5Q76,50,77,67.5Z;
+
+                     M80.5,60.5Q67,71,56,72Q45,73,36,67Q27,61,26.5,49.5Q26,38,34,26.5Q42,15,57.5,18Q73,21,83.5,35.5Q94,50,80.5,60.5Z
+                  "/>
+          </path>
+        </svg>
+      </div>
+
+    </section>
   <% end %>
-</div>
+</section>
+
+<script>
+    document.addEventListener('turbo:load', () => {
+        document.querySelectorAll('.entry-click').forEach((element) => {
+            element.addEventListener('click', () => {
+                console.log('click');
+                const url = element.getAttribute('data-url');
+                if (url) {
+                    window.location = url;
+                }
+            });
+        });
+    });
+</script>
