--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
+  <body class="<%= controller.controller_name %> <%= controller.action_name %> <%= 'entries__show-' + mood_group(@entry.emotion) if defined?(@entry) %>">
     <%= render 'layouts/navigation' %>
     <%= yield %>
     <p class="notice"><%= notice %></p>
