--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -31,7 +31,7 @@
         </div>
 
         <div class="entries__index-entry-footer-right">
-          <div>emotion shape (if time..)</div>
+          <div>emotion shape placeholder</div>
         </div>
       </div>
 
