--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -108,3 +108,22 @@ h1 {
 .delete-button:hover {
     background-color: #c82333;
 }
+
+.friend-list {
+    list-style: none; 
+    align-items: center;
+ 
+}
+
+.a-friend {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 10px;
+    border-bottom: 1px solid #ddd;
+}
+
+.friend-profile-picture {
+    border-radius: 50%;
+    object-fit: cover;
+}
