--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -1,3 +1,64 @@
+
+<section class="entries__new-content-container">
+  <div class="entries__new-header">
+    <p>New Entry</p>
+  </div>
+
+  <div class="entries__new-info-container">
+    <p>emotion selector</p>
+    <p>privacy selector</p>
+    <p>energy level selector</p>
+  </div>
+
+  <div class="entries__new-tags-container">
+
+
+    <h2>Who are you with?</h2>
+    <div class="entries__new-company-tags-container">
+      <p>Friends</p>
+      <p>Family</p>
+      <p>Pets</p>
+      <p>Strangers</p>
+      <p>Alone</p>
+      <p>Associates</p>
+      <p>Friend</p>
+      <p>Partner</p>
+    </div>
+
+    <h2>What are you doing?</h2>
+    <div class="entries__new-activity-tags-container">
+      <p>Cooking</p>
+      <p>Eating</p>
+      <p>Working Out</p>
+      <p>Cleaning</p>
+      <p>Journaling</p>
+      <p>Meditating</p>
+      <p>Working</p>
+      <p>Dancing</p>
+      <p>Water Aerobics</p>
+    </div>
+
+    <h2>Where are you you?</h2>
+    <div class="entries__new-location-tags-container">
+      <p>Home</p>
+      <p>Library</p>
+      <p>School</p>
+      <p>Work</p>
+      <p>Park</p>
+      <p>Outside</p>
+      <p>Friend's House</p>
+      <p>Gym</p>
+      <p>Restaurant</p>
+      <p>Club</p>
+    </div>
+  </div>
+
+  <div class="entries__new-text-container">
+    <p>Text content input</p>
+  </div>
+
+</section>
+
 <h1>New Entry</h1>
 
 <%= render 'form', entry: @entry %>
