--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -542,6 +542,29 @@ body.entries__show-low-energy-unpleasant .entries__show-emotion-label  {
   padding: 10px;
 }
 
+input[type="radio"] {
+  display: none;
+}
+
+.radio-label {
+  display: inline-block;
+  margin: 5px;
+  padding: 10px 20px;
+  border: 2px solid #4F46E5;
+  border-radius: 5px;
+  background-color: #f3f4f6;
+  color: #4F46E5;
+  font-size: 14px;
+  text-align: center;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+input[type="radio"]:checked + .radio-label {
+  background-color: #007BFF;
+  color: white;
+  border-color: #0056b3;
+}
 
 
 
