--- a/app/views/friendships/show.html.erb
+++ b/app/views/friendships/show.html.erb
@@ -11,7 +11,7 @@
         alt:"#{friendship.friend.username}",
         class: "friend-profile-picture"  %>
         <% end %>
-      <%= friendship.friend.username %> (<%= friendship.friend.email %>)
+      <%= friendship.friend.username %> 
       <span> <% if current_user.friendships.exists?(friend_id: friendship.friend.id) %>
       <%= button_to "Remove", remove_friend_friendships_path(email: friendship.friend.email, username: friendship.friend.username), method: :delete, class: "btn btn-danger" %> 
       <% end %>
