--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -252,10 +252,22 @@
   flex-direction: column;
 }
 
-.entries__index-entry-header-left-tags {
+.entries__index-entry-header-left-tags-container {
   display: flex;
   flex-direction: row;
-  gap: 10px
+  gap: 10px;
+  width: 500px;
+  flex-wrap: wrap;
+  margin-bottom: 20px;
+}
+
+.entries__index-entry-header-left-tags-container p {
+  border: 1px white solid;
+  border-radius: 10px;
+  padding: 5px 10px;
+  font-size: 10px;
+  margin: 0;
+
 }
 
 .entries__index-entry-footer {
@@ -385,7 +397,6 @@ body.entries__show-low-energy-unpleasant .entries__show-emotion-label  {
   background-color: rgba(126, 132, 128, 0.2);
 
   padding: 15px;
-  align-items: end;
   border-radius: 10px;
   max-width: 600px;
   width: 100%;
@@ -394,7 +405,8 @@ body.entries__show-low-energy-unpleasant .entries__show-emotion-label  {
 .entries__show-tags-container {
   color: white;
   display: flex;
-  width: 40%;
+  width: 60%;
+  flex-wrap: wrap;
   justify-content: end;
   gap: 20px;
 }
@@ -410,11 +422,13 @@ body.entries__show-low-energy-unpleasant .entries__show-emotion-label  {
 
 .entries__show-date-container {
   color: white;
+  display: flex;
+  justify-content: start;
+  align-items: start;
 }
 
 .entries__show-date-container p {
   margin: 0px;
-
 }
 
 .entries__show-entry-text-container {
@@ -499,7 +513,17 @@ body.entries__show-low-energy-unpleasant .entries__show-emotion-label  {
 
 .entries__new-header  {
   color: white;
+  border: 1px solid;
+  width: 100%;
+  max-width: 600px;
+  text-align: center;
+  border-radius: 10px;
   font-size: 30px;
+  margin: auto auto 30px;
+}
+
+.entries__new-header p {
+  margin: 0px;
 }
 
 .entries__new-info-container {
@@ -512,7 +536,7 @@ body.entries__show-low-energy-unpleasant .entries__show-emotion-label  {
   align-items: end;
   border-radius: 10px;
   justify-content: space-between;
-  border: white solid 1px;
+
 
 }
 
@@ -527,13 +551,15 @@ body.entries__show-low-energy-unpleasant .entries__show-emotion-label  {
   max-width: 600px;
   width: 100%;
   border: 1px white;
+  margin-top: 30px;
 }
 
 .entries__new-tags-container div {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  gap: 20px
+  gap: 20px;
+  margin: 10px 0 40px;
 }
 
 .entries__new-tags-container div p {
@@ -542,28 +568,78 @@ body.entries__show-low-energy-unpleasant .entries__show-emotion-label  {
   padding: 10px;
 }
 
-input[type="radio"] {
+input[type="checkbox"] {
   display: none;
 }
 
-.radio-label {
+.entries__new-tag-label {
   display: inline-block;
   margin: 5px;
   padding: 10px 20px;
-  border: 2px solid #4F46E5;
-  border-radius: 5px;
-  background-color: #f3f4f6;
-  color: #4F46E5;
+  border: 1px solid white;
+  border-radius: 20px;
   font-size: 14px;
   text-align: center;
   cursor: pointer;
   transition: all 0.3s ease;
+  color: white;
+  background-color: black;
 }
 
-input[type="radio"]:checked + .radio-label {
-  background-color: #007BFF;
+input[type="checkbox"]:checked + .entries__new-tag-label {
+  background-color: white;
+  color: black;
+}
+
+.entries__new-text-container {
+  width: 100%;
+  max-width: 600px;
+}
+
+.entries__new-text-container label {
+  font-size: 30px;
+}
+
+.entries__new-text-field {
+  width: 100%;
+  max-width: 600px;
+  background-color: black;
+  border: 1px white solid;
+  border-radius: 10px;
   color: white;
-  border-color: #0056b3;
+  padding: 10px;
+}
+
+.entries__new-submit-button {
+  background-color: black;
+  color: white;
+  width: 100%;
+  border: 1px solid white;
+  border-radius: 10px;
+  padding: 5px 10px;
+  margin-top: 20px;
+  margin-bottom: 100px;
+  max-width: 600px;
+}
+
+.entries__edit-header  {
+  display: flex;
+  justify-content: center;
+  color: white;
+  border: 1px solid;
+  text-align: center;
+  border-radius: 10px;
+  font-size: 30px;
+  width: 100%;
+  margin: auto;
+  max-width: 600px;
+
+  align-items: center;
+  flex-direction: column;
+}
+
+.entries__edit-header p {
+  margin: 0;
 }
 
 
