--- a/app/views/entries/edit.html.erb
+++ b/app/views/entries/edit.html.erb
@@ -1,5 +1,5 @@
-<h1>Edit Entry</h1>
+<div class="entries__edit-header">
+  <p>Edit Entry</p>
+</div>
 
 <%= render 'form', entry: @entry %>
-
-<%= link_to 'Back', entries_path %>
