--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -13,9 +13,13 @@
         <div class="entries__index-entry-header-left">
           <p><%= entry.created_at.strftime("%a %b %-d %l:%M %p") %></p>
 
-          <div class="entries__index-entry-header-left-tags">
-            <p>tag1</p>
-            <p>tag2</p>
+          <div class="entries__index-entry-header-left-tags-container">
+            <% all_tags = JSON.parse(entry.company) + JSON.parse(entry.activity) + JSON.parse(entry.location)%>
+            <% all_tags.each do |tag| %>
+              <% unless tag == "0" %>
+                <p><%=tag %></p>
+              <% end %>
+            <% end %>
           </div>
         </div>
 
