--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -14,9 +14,12 @@
     </div>
 
     <div class="entries__show-tags-container">
-      <p>tag1</p>
-      <p>tag2</p>
-      <p>tag3</p>
+      <% all_tags = JSON.parse(@entry.company) + JSON.parse(@entry.activity) + JSON.parse(@entry.location)%>
+      <% all_tags.each do |tag| %>
+        <% unless tag == "0" %>
+          <p><%=tag %></p>
+        <% end %>
+      <% end %>
     </div>
   </div>
 
