added delete button to show file

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -18,6 +18,6 @@
 
 
   <div class="actions">
-    <%= f.submit 'Comment', class: "btn btn-primary" %>
+    <%= f.submit 'Comment', class: "btn btn-primary btn-sm" %>
   </div>
 <% end %>
