--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -6,5 +6,5 @@
 <br>
 
 <div>
-  <%= link_to "Back to comments", comments_index_path %>
+   <%= link_to 'Friends Entries', friend_entries_path, class: "btn btn-secondary btn-sm" %>
 </div>
