--- a/app/views/entries/friends_entries.html.erb
+++ b/app/views/entries/friends_entries.html.erb
@@ -45,7 +45,7 @@
           <% end %>
           </span>
           <span>
-           <%= link_to entry_comment_path(entry, comment), method: :delete, class: "btn btn-danger btn-sm" do%>
+           <%= button_to entry_comment_path(entry, comment), method: :delete, class: "btn btn-danger btn-sm" do%>
              <i class="bi bi-trash"></i> 
            </span><% end %>
         </p>
