--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -6,12 +6,12 @@
     <%= link_to 'Settings', '#', class: 'navbar-btn' %>
 
 
-    <% if current_user.notification&.persisted? %>
-      <%= link_to 'Schedule', notification_path(current_user.notification), class: 'navbar-btn' %>
-    <% else %>
+    <%# if current_user.notification&.persisted? %>
+      <%#= link_to 'Schedule', notification_path(current_user.notification), class: 'navbar-btn' %>
+    <%# else %>
 
-      <%= link_to 'Schedule', new_notification_path, class: 'navbar-btn' %>
-    <% end %>
+      <%#= link_to 'Schedule', new_notification_path, class: 'navbar-btn' %>
+    <%# end %>
 
     <%= link_to 'Sign out', destroy_user_session_path, data: { turbo_method: :delete }, class: 'navbar-btn' %>
 
