--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -289,7 +289,7 @@
 
 //entries show styles ------------------------------
 
-body.entries.show {
+body.entries.show, body.entries.edit {
   min-height: 100vh;
   overflow-x: hidden;
   background-attachment: fixed;
@@ -536,12 +536,31 @@ body.entries__show-low-energy-unpleasant .entries__show-emotion-label  {
   align-items: end;
   border-radius: 10px;
   justify-content: space-between;
-
-
+  margin-top: 30px;
 }
 
 .entries__new-info-container p {
   margin: 0px;
+}
+
+.entries__new-emotion-selector-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.entries__new-private-public-container input[type="checkbox"] {
+  width: 20px; /* Adjust the width */
+  height: 20px; /* Adjust the height */
+  cursor: pointer; /* Adds a pointer cursor for better UX */
+  font-size: 400px;
+}
+
+.app__form-partial-public-checkbox {
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
 }
 
 .entries__new-tags-container {
@@ -568,9 +587,11 @@ body.entries__show-low-energy-unpleasant .entries__show-emotion-label  {
   padding: 10px;
 }
 
-input[type="checkbox"] {
+
+.entries__new-tags-container input[type="checkbox"] {
   display: none;
 }
+
 
 .entries__new-tag-label {
   display: inline-block;
