--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -783,3 +783,43 @@ h1 {
     border-radius: 50%;
     object-fit: cover;
 }
+
+//log in and sign up styles ------------------------------
+.card {
+  background-color: #000000;
+  color: #d4cbcb;
+  width: 30%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+
+.card-header {
+  margin-left: 30%;
+}
+
+.login {
+  background-color: black;
+  color: white;
+  width: 100%;
+  border: 1px solid white;
+  border-radius: 10px;
+  padding: 5px 10px;
+  margin-top: 20px;
+  margin-bottom: 100px;
+  max-width: 600px;
+}
+
+.sign-up {
+  background-color: black;
+  color: white;
+  width: 100%;
+  border: 1px solid white;
+  border-radius: 10px;
+  padding: 5px 10px;
+  margin-top: 20px;
+  margin-bottom: 100px;
+  max-width: 600px;
+}
