--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,9 @@
   </head>
 
   <body class="<%= controller.controller_name %> <%= controller.action_name %> <%= 'entries__show-' + mood_group(@entry.emotion) if defined?(@entry) %>">
-    <%= render 'layouts/navigation' %>
+    <% if user_signed_in? %>
+      <%= render 'layouts/navigation' %>
+    <% end %>
     <%= yield %>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
